[package]
name = "Molten"
version = "0.1.0"
authors = [
    "Leopold Arkham <leopold.arkham@gmail.com>",
    "Eric Huss <eric@huss.org>"
    ]
readme = "README.md"
repository = "https://github.com/LeopoldArkham/Molten"
homepage = "https://github.com/LeopoldArkham/Molten"
documentation = "https://docs.rs/molten"
description = """
Molten is a lossless TOML parser that preserves all comments, indentations, 
whitespace and internal element ordering, and makes all of these fully 
editable via an easy API. It is written with the intent of replacing the 
current TOML parser used in cargo-edit, and, eventually, adding that
functionality to Cargo itself.
"""
categories = ["config", "encoding", "parser-implementations"]
keywords = ["toml", "parser", "config", "style-preserving"]
license = "Apache-2.0/MIT"

# Set to true to enable publishing to crates.io
publish = false

exclude = [
    ".travis.yml",
    "appveyor.yml",
    "parsed.txt",
    "reconstructed.txt",
    ".*"
]

[badges]
travis-ci = { repository = "LeopoldArkham/Molten" }
appveyor = { repository = "LeopoldArkham/Molten" }

[dependencies]
chrono = "0.3.0"
pretty_assertions = "0.4.0"
error-chain = "0.11.0"

[dev-dependencies]
test-case-derive = "0.1.4"
pretty_assertions = "0.4.0"
lazy_static = "0.2"
